--- a/templates/Dockerfile-run
+++ b/templates/Dockerfile-run
@@ -393,7 +393,11 @@ RUN  \
         curl -sLO https://ffmpeg.org/releases/ffmpeg-${FFMPEG_VERSION}.tar.bz2 && \
         tar -jx --strip-components=1 -f ffmpeg-${FFMPEG_VERSION}.tar.bz2
 
-
+## ffmpeg ism_movenc.patch
+RUN  \
+        DIR=/tmp/ffmpeg && mkdir -p ${DIR} && cd ${DIR} && \
+        curl -sLO https://raw.githubusercontent.com/unifiedstreaming/live-demo-cmaf/master/ffmpeg/ism_movenc.patch && \
+        git apply ism_movenc.patch
 
 RUN \
         DIR=/tmp/ffmpeg && mkdir -p ${DIR} && cd ${DIR} && \
